--- a/our-work.html
+++ b/our-work.html
@@ -9,6 +9,8 @@
 	
 	<link rel="shortcut icon" href="images/favicon.png">
 	<title>5th Dimension Collision Repair</title>
+        <meta name="description" content="Fifth Dimension Collision Repair are your Champaign Country collision, repair specialists. Quality worksmanship, quality service.">
+        <meta name="keywords" content="Collision repair, custom paint, cars, car repair, champaign, urbana, danville,     mechanic">
 
 	<!-- Bootstrap Core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -126,122 +128,86 @@
 		<div id="isotope" class="isotope col-small-margins" data-isotope-mode="masonry" data-isotope-col="2" data-lightbox-type="gallery">
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/1.jpg" alt="">
+					<img src="images/gallery/repair-1.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/1.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/2.jpg" alt="">
+					<img src="images/gallery/repair-2.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/2.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/3.jpg" alt="">
+					<img src="images/gallery/repair-3.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/3.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/4.jpg" alt="">
+					<img src="images/gallery/repair-4.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/4.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/5.jpg" alt="">
+					<img src="images/gallery/repair-5.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/5.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/6.jpg" alt="">
+					<img src="images/gallery/paint-6.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/6.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/7.jpg" alt="">
+					<img src="images/gallery/paint-7.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/7.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/8.jpg" alt="">
+					<img src="images/gallery/paint-8.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/8.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/9.jpg" alt="">
+					<img src="images/gallery/paint-9.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/9.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/10.jpg" alt="">
+					<img src="images/gallery/paint-10.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/10.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/11.jpg" alt="">
+					<img src="images/gallery/paint-11.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/11.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="isotope-item">
 				<div class="effect social-links">
-					<img src="images/gallery/12.jpg" alt="">
+					<img src="images/gallery/repair-12.jpg" alt="">
 					<div class="image-box-content">
-						<p>
-							<a href="images/gallery/12.jpg" title="Your image title here!"><i class="fa fa-expand"></i></a>
-						</p>
 					</div>
 				</div>
 			</div>
@@ -261,7 +227,7 @@
 		We are always taking applications from qualified people who want to be a part of what we do!
 		</p>
 		
-		<a class="button color button-3d rounded icon-left" href="#"><span><i class="fa fa-tint"></i>Contact Us</span></a>
+		<a class="button color button-3d rounded icon-left" href="ihampton@gmail.com, smiller@5dcollision.com"><span><i class="fa fa-tint"></i>Contact Us</span></a>
 			</div>
 	</div>
 </section>
@@ -296,8 +262,8 @@
 				<div class="col-sm-4">
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
-							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
-							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com">csr@5dcollision.com</a>
+							<li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:2175312695">(217) 531-2695</a> </li>
+							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com, ihampton@gmail.com, smiller@5dcollision.com">csr@5dcollision.com</a>
 							</li>
 						</ul>
 					</div>
