--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="images/favicon.png">
     <title>5th Dimension Collision Repair</title>
+        <meta name="description" content="Fifth Dimension Collision Repair are your Champaign Country collision repair specialists. Quality worksmanship, quality service.">
+        <meta name="keywords" content="Collision repair, custom paint, cars, car repair, champaign, urbana, danville,     mechanic">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -109,7 +111,7 @@
                         <h3 class="text-uppercase">Request an Estimate</h3>
                         <p>These messages are forwarded directly to our email. You will recieve a response within one hour (during regular business hours).</p>
                         <div class="m-t-30">
-                            <form id="widget-contact-form" action="include/contact-form.php" role="form" method="post">
+                            <form id="widget-contact-form" action="contact-form.php" role="form" method="post">
                                 <div class="row">
                                     <div class="form-group col-sm-6">
                                         <label for="name">Name</label>
@@ -171,7 +173,7 @@
                                   <strong>5th Dimension Collision Repair</strong><br>
                                   2702 N Mattis Ave,<br>
                                   Champaign, IL 61822<br>
-                                  <abbr title="Phone">P:</abbr> (217) 531-2695
+                                  <abbr title="Phone">P:</abbr><a href="tel:2175312695"> (217) 531-2695
                                   </address>
                             </div>
                         </div>
@@ -216,8 +218,8 @@
 				<div class="col-sm-4">
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
-							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
-							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:cser@5dcollision.com">csr@5dcollision.com</a>
+							<li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:2175312695">(217) 531-2695</a> </li>
+							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com, ihampton@gmail.com, smiller@5dcollision.com">csr@5dcollision.com</a>
 							</li>
 						</ul>
 					</div>
