--- a/estimate.html
+++ b/estimate.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="images/favicon.png">
     <title>5th Dimension Collision Repair</title>
+        <meta name="description" content="Fifth Dimension Collision Repair are your Champaign Country collision repair specialists. Quality worksmanship, quality service.">
+        <meta name="keywords" content="Collision repair, custom paint, cars, car repair, champaign, urbana, danville,     mechanic">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -102,7 +104,7 @@
         <!-- END: PAGE TITLE -->
         
         <!-- VIDEO -->
-        <section class="fullscreen background-overlay" data-vide-bg="video/cs_bg" data-vide-options="position: 0% 50%">
+        <section class="fullscreen background-overlay" data-vide-bg="video/customer-service" data-vide-options="position: 0% 50%">
 			<div class="container-fluid">
                 <div class="col-md-6"></div>
 				<div class="col-md-6 background-colored text-light p-40">
@@ -196,8 +198,8 @@
 				<div class="col-sm-4">
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
-							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
-							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com">csr@5dcollision.com</a>
+							<li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:2175312695">(217) 531-2695</a> </li>
+							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com, ihampton@gmail.com, smiller@5dcollision.com">csr@5dcollision.com</a>
 							</li>
 						</ul>
 					</div>
