--- a/estimate.html
+++ b/estimate.html
@@ -36,7 +36,7 @@
     <link href="css/color-variations/orange.css" rel="stylesheet" type="text/css" media="screen" title="orange">
 
     <!-- LOAD GOOGLE FONTS -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800%7CMontserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800%7CMontserrat:400,700" rel="stylesheet" type="text/css" />
 
     <!-- CSS CUSTOM STYLE -->
     <link rel="stylesheet" type="text/css" href="css/custom.css" media="screen" />
