contact test update and hover button

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<!--<h3 class="m-b-0">5th Dimension</h3>-->
 						<h2 class="text-medium m-t-0">5th Dimension Collision Repair</h2>
 						<p class="lead">Quality Worksmanship, Quality Service</p>
-						<a class="button button-light rounded" href="estimate.html">Request an Estimate</a>						
+						<a class="button button-light rounded cta" href="estimate.html">Request an Estimate</a>						
 					</div>
 
 
